cleaning up author detection